load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("@mono_crates//:defs.bzl", "all_crate_deps")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

rust_library(
    name = "engine_lib",
    crate_name = "boss_engine",
    srcs = [
        "src/app.rs",
        "src/audit.rs",
        "src/audit_effort.rs",
        "src/build_info.rs",
        "src/ci_log_reader.rs",
        "src/ci_watch.rs",
        "src/cli.rs",
        "src/comments_anchor.rs",
        "src/completion.rs",
        "src/config.rs",
        "src/conflict_diagnosis.rs",
        "src/conflict_watch.rs",
        "src/coordinator.rs",
        "src/dead_pid_sweep.rs",
        "src/dep_unblock_sweep.rs",
        "src/design_detector.rs",
        "src/dispatch_events.rs",
        "src/dispatch_reader.rs",
        "src/effort.rs",
        "src/engine_control.rs",
        "src/events_socket.rs",
        "src/external_tracker/credentials.rs",
        "src/external_tracker/github.rs",
        "src/external_tracker/github_oauth.rs",
        "src/external_tracker/mod.rs",
        "src/external_tracker/reconcile.rs",
        "src/feature_flags.rs",
        "src/host_adapter.rs",
        "src/host_registry.rs",
        "src/host_scheduling.rs",
        "src/ipc_log.rs",
        "src/lib.rs",
        "src/live_status.rs",
        "src/live_status_loop.rs",
        "src/live_status_redact.rs",
        "src/live_worker_state.rs",
        "src/merge_poller.rs",
        "src/merge_when_ready.rs",
        "src/metrics/mod.rs",
        "src/metrics/persistence.rs",
        "src/metrics/registry.rs",
        "src/nudge_breaker.rs",
        "src/orphan_sweep.rs",
        "src/pane_summary.rs",
        "src/pr_url_capture.rs",
        "src/protocol.rs",
        "src/recovery_backup.rs",
        "src/remote_wrapper.rs",
        "src/repo_slug.rs",
        "src/resolution_signal_capture.rs",
        "src/run_reconcile.rs",
        "src/runner.rs",
        "src/settings.rs",
        "src/spawn_flow.rs",
        "src/ssh_transport.rs",
        "src/stale_worker_sweep.rs",
        "src/transcript_tail.rs",
        "src/transient_error.rs",
        "src/transient_recovery.rs",
        "src/work.rs",
        "src/work/audit_misc.rs",
        "src/work/blocking.rs",
        "src/work/chain_helpers.rs",
        "src/work/comments.rs",
        "src/work/conflict_res.rs",
        "src/work/create_entities.rs",
        "src/work/dep_helpers.rs",
        "src/work/dispatch.rs",
        "src/work/dispatch_helpers.rs",
        "src/work/exec_status_helpers.rs",
        "src/work/exec_tail.rs",
        "src/work/executions_runs.rs",
        "src/work/insert_helpers.rs",
        "src/work/mappers.rs",
        "src/work/metrics_db.rs",
        "src/work/metrics_types.rs",
        "src/work/migrations_a.rs",
        "src/work/migrations_b.rs",
        "src/work/output_types.rs",
        "src/work/pr_flow.rs",
        "src/work/pr_state.rs",
        "src/work/products_design.rs",
        "src/work/query_ensure.rs",
        "src/work/revision_helpers.rs",
        "src/work/schema_init.rs",
        "src/work/tests.rs",
        "src/work/tests/t01.rs",
        "src/work/tests/t02.rs",
        "src/work/tests/t03.rs",
        "src/work/tests/t04.rs",
        "src/work/tests/t05.rs",
        "src/work/tests/t06.rs",
        "src/work/tests/t07.rs",
        "src/work/updates.rs",
        "src/work/workitems.rs",
        "src/work_dependencies.rs",
        "src/worker_registry.rs",
        "src/worker_sandbox_audit.rs",
        "src/worker_setup.rs",
        "src/wrapper_distribution.rs",
    ],
    crate_root = "src/lib.rs",
    compile_data = glob(["src/external_tracker/testdata/**"]) + [
        "remote/boss-remote-run.sh",
        # Stamped build-info constants (BOSS_VERSION, BOSS_GIT_SHA, BOSS_BUILD_TIME).
        # Referenced via include!(env!("BOSS_BUILD_INFO_RS")) in build_info_stamp module.
        "//tools/boss/installer:build_info_rs",
    ],
    rustc_env = {
        # Absolute path to the generated build-info constants file.
        # rules_rust prefixes $(execpath) values with ${pwd} and resolves
        # them to absolute filesystem paths before invoking rustc.
        "BOSS_BUILD_INFO_RS": "$(execpath //tools/boss/installer:build_info_rs)",
    },
    edition = "2024",
    visibility = [
        "//tools/boss/bossctl:__pkg__",
        "//tools/boss/cli:__pkg__",
        "//tools/boss/client:__pkg__",
        "//tools/boss/engine:__pkg__",
    ],
    deps = [
        "//tools/boss/engine/boss-transcript-markdown:transcript_markdown",
        "//tools/boss/protocol",
    ] + all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_binary(
    name = "engine",
    srcs = ["src/main.rs"],
    edition = "2024",
    # Ship the boss-event hook shim alongside the engine binary so
    # PaneSpawnRunner can resolve it via runfiles at runtime. Without
    # this dep, `bazel run //tools/boss/engine:engine` builds only
    # the engine and worker `settings.json` ends up referencing
    # `boss-event` as a bare name that isn't on the worker's
    # sanitized PATH — every hook fires `command not found`.
    data = ["//tools/boss/event-shim:boss-event"],
    visibility = [
        "//tools/boss/app-macos:__pkg__",
        "//tools/boss/installer:__pkg__",
    ],
    deps = [
        ":engine_lib",
    ] + all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

# engine_lib_test is split into 4 parallel shards to cut wall time.
# Rust's libtest does not honour TEST_SHARD_INDEX / TEST_TOTAL_SHARDS, so
# shard_count would silently re-run the full suite N times.  Instead we
# create 4 rust_test targets with disjoint test-name filters (positional
# FILTERS and --skip flags) so Bazel schedules them in parallel.
# Coverage is identical: the 4 filter sets partition all 1145 tests with
# no overlap.  A test_suite keeps `bazel test :engine_lib_test` working.
#
# All shards share size = "small" / timeout = "moderate" (300 s):
#   linux-amd64 CI runners run ~6-7x slower than macOS dev boxes, so the
#   60 s default for size="small" is too tight even per-shard.
# All shards set env = {"HOME": "/tmp"}:
#   Bazel's sandbox does not inherit HOME; tests that call
#   cube_default_workspace_root_for_test need a stable sentinel value.

# Shard 1 — work module (~226 tests, the single heaviest slice ~7s on macOS)
rust_test(
    name = "engine_lib_test_work",
    crate = ":engine_lib",
    edition = "2024",
    size = "small",
    timeout = "moderate",
    args = ["work::"],
    env = {"HOME": "/tmp"},
    deps = all_crate_deps(normal = True, normal_dev = True),
    proc_macro_deps = all_crate_deps(proc_macro = True, proc_macro_dev = True),
)

# Shard 2 — app + dispatch + conflict + ci_log_reader (~164 tests, ~5s on macOS)
rust_test(
    name = "engine_lib_test_a",
    crate = ":engine_lib",
    edition = "2024",
    size = "small",
    timeout = "moderate",
    args = [
        "app::",
        "dispatch_events::",
        "dispatch_reader::",
        "conflict_diagnosis::",
        "conflict_watch::",
        "ci_log_reader::",
    ],
    env = {"HOME": "/tmp"},
    deps = all_crate_deps(normal = True, normal_dev = True),
    proc_macro_deps = all_crate_deps(proc_macro = True, proc_macro_dev = True),
)

# Shard 3 — completion + coordinator + merge_poller + external_tracker +
#           live_status* + runner + build_info (~358 tests, ~7s on macOS)
rust_test(
    name = "engine_lib_test_b",
    crate = ":engine_lib",
    edition = "2024",
    size = "small",
    timeout = "moderate",
    args = [
        "completion::",
        "coordinator::",
        "merge_poller::",
        "external_tracker::",
        "live_status::",
        "live_status_loop::",
        "live_status_redact::",
        "runner::",
        "build_info::",
        # nudge_breaker is pure in-memory (no global state) and is the
        # auto-nudge sibling of completion; group it here rather than in
        # shard 4 so it doesn't add parallelism to that shard's
        # global-state-sharing tests (audit/worker_setup).
        "nudge_breaker::",
    ],
    env = {"HOME": "/tmp"},
    deps = all_crate_deps(normal = True, normal_dev = True),
    proc_macro_deps = all_crate_deps(proc_macro = True, proc_macro_dev = True),
)

# Shard 4 — everything not covered by shards 1-3 (~397 tests, ~2s on macOS)
rust_test(
    name = "engine_lib_test_rest",
    crate = ":engine_lib",
    edition = "2024",
    size = "small",
    timeout = "moderate",
    args = [
        "--skip", "work::",
        "--skip", "app::",
        "--skip", "dispatch_events::",
        "--skip", "dispatch_reader::",
        "--skip", "conflict_diagnosis::",
        "--skip", "conflict_watch::",
        "--skip", "ci_log_reader::",
        "--skip", "completion::",
        "--skip", "coordinator::",
        "--skip", "merge_poller::",
        "--skip", "external_tracker::",
        "--skip", "live_status::",
        "--skip", "live_status_loop::",
        "--skip", "live_status_redact::",
        "--skip", "runner::",
        "--skip", "build_info::",
        "--skip", "nudge_breaker::",
    ],
    env = {"HOME": "/tmp"},
    deps = all_crate_deps(normal = True, normal_dev = True),
    proc_macro_deps = all_crate_deps(proc_macro = True, proc_macro_dev = True),
)

# Umbrella target: `bazel test //tools/boss/engine:engine_lib_test` runs all
# 4 shards in parallel (subject to --jobs).
test_suite(
    name = "engine_lib_test",
    tests = [
        ":engine_lib_test_work",
        ":engine_lib_test_a",
        ":engine_lib_test_b",
        ":engine_lib_test_rest",
    ],
)

rust_test(
    name = "work_crud_test",
    srcs = ["tests/work_crud.rs"],
    edition = "2024",
    deps = [
        ":engine_lib",
        "//tools/boss/client",
        "//tools/boss/protocol",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

rust_test(
    name = "comments_crud_test",
    srcs = ["tests/comments_crud.rs"],
    edition = "2024",
    size = "small",
    timeout = "moderate",
    deps = [
        ":engine_lib",
        "//tools/boss/client",
        "//tools/boss/protocol",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

rust_test(
    name = "control_verbs_test",
    srcs = ["tests/control_verbs.rs"],
    edition = "2024",
    size = "small",
    # linux-amd64 CI runners run ~6-7x slower than macOS dev boxes; the 60s default
    # for size="small" is too tight when concurrent tests contend on the
    # binary_fingerprint OnceLock during startup. timeout="moderate" (300s) gives headroom.
    timeout = "moderate",
    deps = [
        ":engine_lib",
        "//tools/boss/client",
        "//tools/boss/protocol",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

rust_test(
    name = "shutdown_rpc_test",
    srcs = ["tests/shutdown_rpc.rs"],
    edition = "2024",
    size = "small",
    timeout = "moderate",
    deps = [
        ":engine_lib",
        "//tools/boss/client",
        "//tools/boss/protocol",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

rust_test(
    name = "stop_engine_runtime_test",
    srcs = ["tests/stop_engine_runtime.rs"],
    edition = "2024",
    size = "small",
    timeout = "moderate",
    deps = [
        ":engine_lib",
        "//tools/boss/client",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

rust_test(
    name = "isolation_guard_test",
    srcs = ["tests/isolation_guard.rs"],
    edition = "2024",
    size = "small",
    timeout = "moderate",
    env = {"HOME": "/tmp"},
    deps = [
        ":engine_lib",
        "//tools/boss/client",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

rust_test(
    name = "orphan_reaping_test",
    srcs = ["tests/orphan_reaping.rs"],
    edition = "2024",
    size = "small",
    # The orphan-reap watcher polls every 1s; ORPHAN_TIMEOUT is 8s.
    # On slow CI runners allow plenty of headroom.
    timeout = "moderate",
    env = {"HOME": "/tmp"},
    deps = [
        ":engine_lib",
        "//tools/boss/client",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

filegroup(
    name = "engine_srcs",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:private"],
)

sh_test(
    name = "no_gh_pr_merge_test",
    srcs = ["tests/no_gh_pr_merge_test.sh"],
    data = [":engine_srcs"],
    size = "small",
)
