[package]
name = "boss-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
boss-protocol = { path = "../protocol" }
clap = { workspace = true, features = ["derive"] }
libc = "0.2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
shlex = { workspace = true }
rusqlite = { workspace = true }
which = { workspace = true }

[dev-dependencies]
boss-client = { path = "../client" }
tempfile = { workspace = true }
