load("@mono_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

exports_files(["Cargo.toml"])

rust_library(
    name = "github",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "boss_github",
    crate_root = "src/lib.rs",
    edition = "2024",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    # The three option_env! calls read these vars at compile time.
    # Same Make-variable expansion pattern as //tools/boss/cli:boss.
    rustc_env = {
        "BOSS_SHAKE_APP_ID": "$(BOSS_SHAKE_APP_ID)",
        "BOSS_SHAKE_INSTALLATION_ID": "$(BOSS_SHAKE_INSTALLATION_ID)",
        "BOSS_SHAKE_PRIVATE_KEY_PEM": "$(BOSS_SHAKE_PRIVATE_KEY_PEM)",
    },
    visibility = [
        "//tools/boss:__subpackages__",
    ],
    deps = all_crate_deps(normal = True),
)

rust_test(
    name = "github_test",
    size = "small",
    crate = ":github",
    edition = "2024",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    rustc_env = {
        "BOSS_SHAKE_APP_ID": "$(BOSS_SHAKE_APP_ID)",
        "BOSS_SHAKE_INSTALLATION_ID": "$(BOSS_SHAKE_INSTALLATION_ID)",
        "BOSS_SHAKE_PRIVATE_KEY_PEM": "$(BOSS_SHAKE_PRIVATE_KEY_PEM)",
    },
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)
