load(":defs.bzl", "check_index", "checkleft", "local_check")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:private"])

sh_binary(
    name = "noop_check_bin",
    srcs = ["testdata/noop_check.sh"],
)

local_check(
    name = "noop-check",
    binary = ":noop_check_bin",
)

check_index(
    name = "noop_check_index",
    checks = [":noop-check"],
)

checkleft(
    name = "run_checkleft_smoke",
    check_index = ":noop_check_index",
)

checkleft(
    name = "run_checkleft_embedded_index_smoke",
    checks = [":noop-check"],
)

checkleft(
    name = "run_checkleft_external_file_smoke",
    check_index = ":noop_check_index",
    external_checks_file = ":testdata/external_checks.yaml",
)
