load("@mono_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_shared_library")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//tools/checkleft/wasm:defs.bzl", "rust_wasm_component")

# The aggregating guest crate. It links every preinstalled check (each an rlib)
# and calls export_checks! once. On the host target this builds a native shared
# library; on wasm32-wasip2 (via the rust_wasm_component rule below) it builds
# the SINGLE multiplexed Component Model component that ships bundled in the
# checkleft binary and exports every preinstalled check.
rust_shared_library(
    name = "preinstalled_bundle",
    srcs = ["src/lib.rs"],
    crate_name = "checkleft_preinstalled_bundle",
    edition = "2024",
    proc_macro_deps = [
        # The export_checks! macro is provided by sdk-macro; it's re-exported
        # from checkleft-check-sdk but Bazel requires the proc-macro target to
        # be listed explicitly in the user's crate too.
        "//tools/checkleft/sdk-macro:checkleft_check_sdk_macro",
    ] + all_crate_deps(proc_macro = True),
    visibility = ["//tools/checkleft:__pkg__"],
    deps = [
        "//tools/checkleft/checks/file/forbidden-path:file_forbidden_path_check",
        "//tools/checkleft/checks/file/ifchange:ifchange_check",
        "//tools/checkleft/checks/file/size:file_size_check",
        "//tools/checkleft/checks/md/link-integrity:md_link_integrity_check",
        "//tools/checkleft/checks/rust/giant-structs:rust_giant_structs_use_builder",
        "//tools/checkleft/checks/rust/giant-structs-create:rust_giant_structs_create",
        "//tools/checkleft/sdk:checkleft_check_sdk",
    ] + all_crate_deps(normal = True),
)

# Build the aggregated bundle into one Component Model component. Produces
# preinstalled_bundle_component.wasm and its .sha256 sidecar. The .wasm is
# embedded in checkleft_lib via include_bytes! (the checkleft_wasm_bundle_lib
# micro-library below).
rust_wasm_component(
    name = "preinstalled_bundle_component",
    crate = ":preinstalled_bundle",
    visibility = ["//tools/checkleft:__pkg__"],
)

# Micro-library that embeds the wasm bytes via include_bytes!. Kept separate from
# checkleft_lib so that having the generated wasm artifact in compile_data here
# does not bleed into checkleft_lib and trigger rules_rust's
# "symlink-sources-to-bazel-out" mode, which would break wasmtime's bindgen!
# macro path resolution for check.wit. checkleft_lib depends on this target; the
# bytes arrive as checkleft_preinstalled_wasm_bundle::WASM at link time.
rust_library(
    name = "checkleft_wasm_bundle_lib",
    srcs = ["bundled.rs"],
    compile_data = [":preinstalled_bundle_component"],
    crate_name = "checkleft_preinstalled_wasm_bundle",
    crate_root = "bundled.rs",
    edition = "2024",
    visibility = ["//tools/checkleft:__pkg__"],
    deps = [],
)

# CI smoke test: builds the consolidated bundle through the bazel rule (which
# validates the component with wasm-tools) and asserts the sha256 sidecar is
# produced. Proves the multiplexed component compiles end-to-end under bazel.
sh_test(
    name = "preinstalled_bundle_component_smoke_test",
    size = "small",
    srcs = ["//tools/checkleft/wasm:verify_component_sha.sh"],
    args = ["$(rootpaths :preinstalled_bundle_component)"],
    data = [":preinstalled_bundle_component"],
)
